# NeuraLoc-Core

./: .gitattributes  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  HARDWARE_ACCELERATION.md  MODEL_CATALOG.md  NEXT_STEPS.md  PROMPT_SYSTEM.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  index.html  package-lock.json  package.json  project.md  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/manifests/: llama-cpp-b9986-windows-x86_64-cpu.json
src-tauri/migrations/: 0001_foundation.sql  0002_model_library.sql  0003_engine_packages.sql  0004_prompt_library.sql  0005_conversation_persistence.sql  0006_conversation_branches.sql  0007_context_windows.sql
src-tauri/src/: app_state.rs  context.rs  errors.rs  events.rs  lib.rs  main.rs
src-tauri/src/commands/: app_commands.rs  chat_commands.rs  conversation_commands.rs  engine_commands.rs  engine_package_commands.rs  hardware_commands.rs  mod.rs  model_commands.rs  prompt_commands.rs  settings_commands.rs
src-tauri/src/conversations/: mod.rs  repository.rs  service.rs  types.rs
src-tauri/src/engine_packages/: mod.rs  repository.rs  service.rs  types.rs
src-tauri/src/engines/: llama_cpp.rs  mod.rs  service.rs  traits.rs
src-tauri/src/hardware/: detector.rs  mod.rs  types.rs
src-tauri/src/models/: fit.rs  gguf.rs  mod.rs  path_grants.rs  repository.rs  service.rs  types.rs
src-tauri/src/processes/: lifecycle.rs  manager.rs  mod.rs
src-tauri/src/prompts/: mod.rs  parser.rs  path_grants.rs  repository.rs  service.rs  types.rs
src-tauri/src/scheduler/: job.rs  mod.rs  resource_policy.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: database.rs  migrations.rs
src/app/: App.tsx  styles.css
src/components/: Sidebar.tsx
src/features/chat/: ChatWorkspace.tsx  chat-metrics.test.ts  chat-metrics.ts  conversation-history.test.ts  conversation-history.ts  model-selection.test.ts  model-selection.ts
src/features/hardware/: HardwareView.tsx
src/features/models/: ModelManagerView.tsx  model-format.test.ts  model-format.ts
src/features/settings/: SettingsView.tsx
src/features/workspaces/: WorkspaceView.tsx
src/services/: bridge.ts
src/stores/: app-store.ts
src/types/: domain.ts
src/utils/: format.test.ts  format.ts
